css/main.css
body {
    background-image: url('../img/background.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    margin: 0;
    padding: 0;
    height: 100vh;
    width: 100vw;
    display: grid;
    place-items: center;
}

#board{
    position: relative;
    width: 800px;
    height: 600px;
    outline: 5px solid rgb(191, 182, 120);
    background-color: rgba(255, 255, 255, 0.7);
    overflow: hidden;
}

#elaine{
   position: absolute;
   
}

#elaine img {
    height: 100%;
    width: 100%;
}

.obstacleSalad{
    position: absolute;
}

.obstacleSalad img{
    height: 100% ;
    width: 100%;
}

#george{
    position: absolute;
    bottom: 0;
    
}

#george img{
    height: 100%;
    width: 100%;
}

